[gd_scene load_steps=3 format=2]

[ext_resource path="res://tests/scenes/TestBullets.gd" type="Script" id=1]
[ext_resource path="res://nodes/objects/BulletSystem.tscn" type="PackedScene" id=2]

[node name="TestBullets" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerBullets" parent="." instance=ExtResource( 2 )]
fire_speed = 250.0

[node name="EnemyBullets" parent="." instance=ExtResource( 2 )]
fire_speed = 250.0
bullet_target = 1

[node name="LaserBullets" parent="." instance=ExtResource( 2 )]
bullet_type = 3
